# ceramicraft-customer-support-agent

./: .dockerignore  .env.example  .gitignore  .snyk  Dockerfile  Makefile  README.md  buf.gen.yaml  docker-compose.yml  pyproject.toml  serve.py  sonar-project.properties
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
.github/workflows/: deepeval.yml  deploy.yml  snyk.yml  sonar.yml  test.yml  trivy.yml
deepeval/: test_classifier.py  test_reply_quality.py  test_security.py
docs/: DEVELOPMENT_PLAN.md  development-plan.md  local-demo-guide.md
protos/: cs_agent.proto
scripts/: chat.py  get_token.py  prompt_register.py  run_evaluation.py
src/ceramicraft_customer_support_agent/: agent.py  classifier.py  config.py  graph.py  grpc_service.py  guard.py  mcp_client.py  mcp_server.py  mlflow_utils.py  nodes.py  prompts.py  serve.py  subgraphs.py
src/ceramicraft_customer_support_agent/pb/: cs_agent_pb2.py  cs_agent_pb2.pyi  cs_agent_pb2_grpc.py
tests/: conftest.py  test_agent.py  test_classifier.py  test_config.py  test_graph.py  test_grpc_service.py  test_guard.py  test_guard_security.py  test_mcp_client.py  test_mcp_server.py  test_mlflow_utils.py  test_nodes.py  test_prompts.py  test_serve.py  test_subgraphs.py
tests/deepeval/: conftest.py  test_classifier.py  test_reply_quality.py
