[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ceramicraft-customer-support-agent"
version = "0.1.0"
description = "Customer Support AI Agent for CeramiCraft."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.4.0",
    "langsmith>=0.3.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "langchain-mcp-adapters>=0.2.2",
    "dttb>=0.3.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "mlflow>=3.11.1,<4",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "grpcio>=1.80.0",
    "protobuf>=6.33.6",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.1.0",
    "ty>=0.0.22",
    "grpcio-tools>=1.80.0",
    "deepeval>=2.0.0",
]

[tool.ruff]
target-version = "py312"
exclude = ["src/ceramicraft_customer_support_agent/pb/"]

[tool.ty.src]
exclude = ["src/ceramicraft_customer_support_agent/pb/", "deepeval/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
